# Terminion

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  shell.rs
src/commands/: cat.rs  cd.rs  clear.rs  cp.rs  date.rs  echo.rs  env.rs  find.rs  grep.rs  head.rs  hostname.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs  tail.rs  touch.rs  wc.rs  which.rs  whoami.rs
tests/: cli.rs
