[package]
name = "terminion"
version = "0.1.0"
edition = "2024"
description = "One command syntax for Windows, Linux and macOS shells"
license = "MIT"
repository = "https://github.com/hameedibrh/Terminion"

[dependencies]
anyhow = "1.0.104"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
filetime = "0.2.29"
regex = "1.13.1"
rustyline = "18.0.1"
shell-words = "1.1.1"
walkdir = "2.5.0"
whoami = "2.1.2"

[dev-dependencies]
tempfile = "3.27.0"
